Fix formatting of Azure Data Explorer and Power BI items

--- a/Index2.html
+++ b/Index2.html
@@ -216,8 +216,8 @@
                         <ul class="list-disc list-inside space-y-2 text-stone-600">
                             <li>Integrate <strong>Azure Key Vault</strong> for secure storage and retrieval of credentials.</li>
                             <li>Use <strong>Azure Functions or Logic Apps</strong> for automated processing of data from Blob Storage.</li>
-                            <li>Prepare data for visualization (e.g., set up connection to **Azure Data Explorer**).</li>
-                            <li>Create the first **Power BI dashboard** connecting to the Azure data source.</li>
+                            <li>Prepare data for visualization (e.g., set up connection to Azure Data Explorer).</li>
+                            <li>Create the first Power BI dashboard connecting to the Azure data source.</li>
                             <li>Enable detailed cost and performance monitoring dashboards.</li>
                         </ul>
                     </div>
